--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,6 +1,6 @@
 name: Etd Twig Extension
-version: 0.0.1
-description: Special Twig Extension
+version: 0.0.2
+description: Special Twig Extensions
 icon: plug
 author:
   name: ETD Solutions
